# cpp-design-pattern

./: .gitattributes  CMakeLists.txt
abstract_factory/: CMakeLists.txt
abstract_factory/origin/: main.cpp  product.cpp  product.h
abstract_factory/refactor/: abstract_factory.cpp  abstract_factory.h  main.cpp
adaptor/: CMakeLists.txt
adaptor/origin/: adaptee.cpp  adaptee.h  main.cpp
adaptor/refactor/: adaptor.cpp  adaptor.h  main.cpp
bridge/: CMakeLists.txt
bridge/origin/: abstraction.cpp  abstraction.h  main.cpp
bridge/refactor/: abstraction.cpp  abstraction.h  implementor.cpp  implementor.h  main.cpp
builder/: CMakeLists.txt
builder/origin/: main.cpp
builder/refactor/: builder.cpp  builder.h  director.cpp  director.h  main.cpp  product.cpp  product.h
chain_of_responsibility/: CMakeLists.txt
chain_of_responsibility/origin/: handler.cpp  handler.h  main.cpp
chain_of_responsibility/refactor/: handler.cpp  handler.h  main.cpp
command/: CMakeLists.txt
command/origin/: invoker.cpp  invoker.h  main.cpp
command/refactor/: command.cpp  command.h  invoker.cpp  invoker.h  main.cpp
composite/: CMakeLists.txt
composite/origin/: main.cpp  node.cpp  node.h
composite/refactor/: composite.cpp  composite.h  main.cpp
decorator/: CMakeLists.txt
decorator/origin/: component.cpp  component.h  main.cpp
decorator/refactor/: component.cpp  component.h  decorator.cpp  decorator.h  main.cpp
facade/: CMakeLists.txt
facade/origin/: main.cpp  subsystem.cpp  subsystem.h
facade/refactor/: facade.cpp  facade.h  main.cpp
factory/: CMakeLists.txt
factory/origin/: main.cpp  product.cpp
factory/refactor/: factory.cpp  factory.h  main.cpp  product.h
flyweight/: CMakeLists.txt
flyweight/origin/: flyweight.cpp  main.cpp
flyweight/refactor/: flyweight.h  flyweight_factory.cpp  flyweight_factory.h  main.cpp
interpreter/: CMakeLists.txt  expression.cpp  expression.h  main.cpp
iterator/: CMakeLists.txt
iterator/origin/: aggregate.h  main.cpp
iterator/refactor/: aggregate.h  main.cpp
mediator/: CMakeLists.txt
mediator/origin/: component.cpp  component.h  main.cpp
mediator/refactor/: component.cpp  component.h  main.cpp  mediator.cpp  mediator.h
memento/: CMakeLists.txt
memento/origin/: main.cpp  originator.cpp  originator.h
memento/refactor/: main.cpp  memento.cpp  memento.h  originator.cpp  originator.h
observer/: CMakeLists.txt
observer/origin/: main.cpp  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h
observer/refactor/: main.cpp  publisher.cpp  publisher.h  subscriber.h
prototype/: CMakeLists.txt
prototype/origin/: main.cpp  prototype.cpp  prototype.h
prototype/refactor/: main.cpp  prototype.cpp  prototype.h
proxy/: CMakeLists.txt
proxy/origin/: main.cpp  subject.cpp  subject.h
proxy/refactor/: main.cpp  proxy.cpp  proxy.h
singleton/: CMakeLists.txt
singleton/origin/: main.cpp  singleton.cpp  singleton.h
singleton/refactor/: main.cpp  singleton.cpp  singleton.h
state/: CMakeLists.txt
state/origin/: context.cpp  context.h  main.cpp
state/refactor/: context.cpp  context.h  state.cpp  state.h
strategy/: CMakeLists.txt
strategy/origin/: context.cpp  context.h  main.cpp  strategy.h
strategy/refactor/: context.cpp  context.h  main.cpp  strategy.cpp  strategy.h
template/: CMakeLists.txt
template/origin/: application.cpp  application.h  library.cpp  library.h
template/refactor/: application.cpp  application.h  library.cpp  library.h  main.cpp
visitor/: CMakeLists.txt
visitor/origin/: element.cpp  element.h  main.cpp
visitor/refactor/: element.cpp  element.h  main.cpp  visitor.cpp  visitor.h
